tests/scan_type_fArg.err
Type error: Arity mismatch in first argument of filter: expected a function of arity 2, but got int -> int at line 7, column 11
