tests/scan_type_fArg.fo
fun int incr(int b) = b

fun int writeInt(int n) = write(n)

fun [int] main() =
  let a = {1, 2, 3} in
  let b = scan(incr, 0, a) in
  map(writeInt, b)
